--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,11 +5,13 @@ div {
 header {
 	z-index: 1;
 	position: fixed;
-	width: 97.5%;
+	width: 100%;
 	margin-top: -20px;
 	height: 80px;
 	background-color: #668284;
 	margin-bottom: 10px;
+	margin-left: -10px;
+	
 }
 
 #name {
@@ -32,11 +34,12 @@ header {
 
 nav {
 	float:right;
-	margin-right: 5px;
+	margin-right: 10px;
 	padding-top: 30px;
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
-	color: #ffffff;
+	color: #a10505;
+	letter-spacing: 0.7px;
 }
 
 h3 {
@@ -59,12 +62,21 @@ li {
 
 a:hover {
 	font-weight: bold;
+	
+}
+
+a:link {
+	color: white;
+}
+
+a:visited {
+	color: black;
 }
 
 .left {
 	position: relative;
 	float: left;
-	margin-top: 50px;
+	margin-top: 60px;
 	width: 10%;
 	height: fill;
 	background-color: #B9D7D9;
@@ -74,7 +86,7 @@ a:hover {
 .right {
 	position: relative;
 	float: right;
-	margin-top: 50px;
+	margin-top: 60px;
 	width: 88%;
 	height: auto;
 	background-color: #F4EBC3;
