--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,111 +1,109 @@
 div {
-	border-radius: 5px;
+  border-radius: 5px;
 }
 
 header {
-	z-index: 1;
-	position: fixed;
-	width: 100%;
-	margin-top: -20px;
-	height: 80px;
-	background-color: #668284;
-	margin-bottom: 10px;
-	margin-left: -10px;
-	
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  margin-top: -20px;
+  height: 80px;
+  background-color: #668284;
+  margin-bottom: 10px;
+  margin-left: -10px;
 }
 
 #name {
-	float:left;
-	margin-left: 5px;
-	padding-top: 10px;
-	font-size: 20px;
-	font-family: Verdana, sans-serif;
-	color: #ffffff;
-	}
+  float: left;
+  margin-left: 5px;
+  padding-top: 10px;
+  font-size: 20px;
+  font-family: Verdana, sans-serif;
+  color: #ffffff;
+}
 
 #email {
-	float:right;
-	margin-right: 5px;
-	padding-top: 20px;
-	font-size: 16px;
-	font-family: Verdana, sans-serif;
-	color: #ffffff;
+  float: right;
+  margin-right: 5px;
+  padding-top: 20px;
+  font-size: 16px;
+  font-family: Verdana, sans-serif;
+  color: #ffffff;
 }
 
 nav {
-	float:right;
-	margin-right: 10px;
-	padding-top: 30px;
-	font-size: 16px;
-	font-family: Verdana, sans-serif;
-	color: #a10505;
-	letter-spacing: 0.7px;
+  float: right;
+  margin-right: 10px;
+  padding-top: 30px;
+  font-size: 16px;
+  font-family: Verdana, sans-serif;
+  color: #a10505;
+  letter-spacing: 0.7px;
 }
 
 h3 {
-	margin-left: 5px;
-	margin-bottom: 15px;
-	font-family: Verdana, sans-serif;
-}
-
-.right p {
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: -10px;
-	font-family: Garamond, serif;
-	color: #000000;
+  margin-left: 5px;
+  margin-bottom: 15px;
+  font-family: Verdana, sans-serif;
 }
 
 li {
-	list-style-type: square;
+  list-style-type: square;
 }
 
 a:hover {
-	font-weight: bold;
-	
+  font-weight: bold;
 }
 
 a:link {
-	color: white;
+  color: white;
 }
 
 a:visited {
-	color: black;
+  color: black;
 }
 
 .left {
-	position: relative;
-	float: left;
-	margin-top: 60px;
-	width: 10%;
-	height: fill;
-	background-color: #B9D7D9;
-	margin-bottom: 10px;
+  position: relative;
+  float: left;
+  margin-top: 60px;
+  width: 10%;
+  height: fill;
+  background-color: #B9D7D9;
+  margin-bottom: 10px;
 }
 
 .right {
-	position: relative;
-	float: right;
-	margin-top: 60px;
-	width: 88%;
-	height: auto;
-	background-color: #F4EBC3;
-	margin-bottom: 10px;
-	line-height: 20px;
+  position: relative;
+  float: right;
+  margin-top: 60px;
+  width: 88%;
+  height: auto;
+  background-color: #F4EBC3;
+  margin-bottom: 10px;
+  line-height: 20px;
+}
+.right p {
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: -10px;
+  font-family: Garamond, serif;
+  color: #000000;
 }
 
 footer {
-	position: relative;
-	height: 50px;
-	background-color: #668284;
-	clear: both;
-	font-family: Verdana, sans-serif;
-	font-size: 14px;
-	text-align: center;
-	color: #ffffff;
+  position: relative;
+  height: 50px;
+  background-color: #668284;
+  clear: both;
+  font-family: Verdana, sans-serif;
+  font-size: 14px;
+  text-align: center;
+  color: #ffffff;
+}
+footer p {
+  position: relative;
+  padding-top: 15px;
 }
 
-footer p {
-	position: relative;
-	padding-top: 15px;
-}
+/*# sourceMappingURL=stylesheet.css.map */
