--- a/mainstylesheet.css
+++ b/mainstylesheet.css
@@ -21,13 +21,15 @@ div {
 	color: #ffffff;
 }
 
-#email{
-	float:right;
-	margin-right: 5px;
-	padding-top: 5px;
+nav {
+	float: right;
+	margin-right: 10px;
+	padding-top: 30px;
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
-	color: #ffffff;
+	color: #a10505;
+	letter-spacing: 0.7px;
+  
 }
 
 h4 {
