--- a/mainstylesheet.css
+++ b/mainstylesheet.css
@@ -6,34 +6,30 @@ header {
 	z-index: 1;
 	position: fixed;
 	width: 97.5%;
-	/*margin-top: -20px;*/
+	margin-top: 0px;
 	height: 60px;
 	background-color: #668284;
-	margin-bottom: 10px;
-	align-items: center;
+	display: block;	
 }
 
 #name {
 	float:left;
-	
-	margin-left: 10px;
-	padding-top: 15px;
-	
-	font-size: 16px;
-	font-family: Verdana, sans-serif;
+	margin-left: 15px;
+	margin-top: 15px;
+	font-size: 24px;
+	font-family: 'Roboto', Verdana, sans-serif;
 	color: #ffffff;
-	
 }
 
 nav {
 	float: right;
-	margin-right: 10px;
 	padding-top: 30px;
-	font-size: 16px;
+	font-size: 18px;
 	font-family: Verdana, sans-serif;
 	color: #a10505;
-	letter-spacing: 0.7px;
-  
+	letter-spacing: 0.5px;
+	display: flex;
+	padding: 9px;  
 }
 
 h4 {
@@ -60,22 +56,21 @@ a:hover {
 
 .menu {
 	float: left;
-	margin-top: 50px;
+	margin-top: 80px;
 	width: 10%;
 	height: 100%;
 	background-color: #B9D7D9;
-	margin-bottom: 10px;
-
 }
 
 .content {
 	
 	float: right;
-	margin-top: 50px;
+	margin-top: 80px;
 	width: 88%;
 	height: auto;
 	background-color: #F4EBC3;
 	margin-bottom: 10px;
+	padding-left: 10px;
 }
 
 #footer {
@@ -92,4 +87,7 @@ a:hover {
 #footer p {
 	position: relative;
 	padding-top: 15px;
+}
+.btn {
+	padding: 10px;
 }
