--- a/mainstylesheet.css
+++ b/mainstylesheet.css
@@ -39,6 +39,7 @@ h1 {
 	text-align: center;
 	color: blue;
 	text-shadow: 3px 2px red;
+	text-transform: capitalize;
 }
 
 h2 {
@@ -112,3 +113,18 @@ a:hover {
 	outline-style: outset;
 	outline-color: snow;
 }
+/*
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: red;
+}
+*/
