--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,33 +6,26 @@ header {
   z-index: 1;
   position: fixed;
   width: 100%;
-  margin-top: -20px;
+  margin-top: -15px;
   height: 80px;
   background-color: #668284;
   margin-bottom: 10px;
   margin-left: -10px;
+  display: flex;
 }
 
 #name {
   float: left;
-  margin-left: 5px;
-  padding-top: 10px;
+  margin-left: 15px;
+  margin-top: 20px;
   font-size: 25px;
   font-family: Verdana, sans-serif;
   color: #ffffff;
 }
 
-#email {
-  float: right;
-  margin-right: 5px;
-  padding-top: 20px;
-  font-size: 16px;
-  font-family: Verdana, sans-serif;
-  color: #ffffff;
-}
 
 nav {
-  float: right;
+  margin-left: auto;
   margin-right: 10px;
   padding-top: 30px;
   font-size: 16px;
@@ -70,8 +63,8 @@ a:visited {
   margin-top: 60px;
   width: 10%;
   height: fill;
-  background-color: #B9D7D9;
-  margin-bottom: 10px;
+  background-color: rgb(154, 229, 235);
+  
 }
 
 .right {
