--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,7 +62,7 @@ a:visited {
   float: left;
   margin-top: 60px;
   width: 10%;
-  height: fill;
+  display: block;
   background-color: rgb(154, 229, 235);
   
 }
