--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ header {
 
 #name {
   float: left;
-  margin-left: 15px;
+  margin-left: 10px;
   margin-top: 20px;
   font-size: 25px;
   font-family: Verdana, sans-serif;
@@ -57,25 +57,31 @@ a:visited {
   color: black;
 }
 
+#clearfix {
+  display: flex;
+  flex-wrap: nowrap;
+}
 .left {
   position: relative;
   float: left;
-  margin-top: 60px;
+  margin-top: 10px;
+  margin-bottom: 0;
   width: 10%;
-  display: block;
   background-color: rgb(154, 229, 235);
-  
+  bottom: 10px;
+  min-height: 100%;  
 }
 
 .right {
   position: relative;
-  float: right;
+  float: left;
   margin-top: 60px;
   width: 88%;
   height: auto;
   background-color: #F4EBC3;
   margin-bottom: 10px;
   line-height: 20px;
+  padding-left: 20px;
 }
 .right p {
   margin-left: 5px;
