--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+
 div {
   border-radius: 5px;
 }
@@ -64,24 +65,26 @@ a:visited {
 .left {
   position: relative;
   float: left;
-  margin-top: 10px;
-  margin-bottom: 0;
+  margin-top: 70px;
+  margin-bottom: -10px;
   width: 10%;
   background-color: rgb(154, 229, 235);
-  bottom: 10px;
-  min-height: 100%;  
+  min-height: 100%; 
+  margin-left: -5px; 
 }
 
 .right {
   position: relative;
   float: left;
-  margin-top: 60px;
+  margin-top: 70px;
   width: 88%;
   height: auto;
   background-color: #F4EBC3;
-  margin-bottom: 10px;
+  margin-bottom: 0;
   line-height: 20px;
   padding-left: 20px;
+  margin-bottom: -10px;
+  padding-right: 0;
 }
 .right p {
   margin-left: 5px;
@@ -93,13 +96,13 @@ a:visited {
 
 footer {
   position: relative;
-  height: 50px;
+  height: 55px;
   background-color: #668284;
-  clear: both;
   font-family: Verdana, sans-serif;
   font-size: 14px;
   text-align: center;
   color: #ffffff;
+  margin: 0 -10px;
 }
 footer p {
   position: relative;
