--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ header {
   width: 100%;
   margin-top: -15px;
   height: 80px;
-  background-color: #668284;
+  background-color: #fdfd0a;
   margin-bottom: 10px;
   margin-left: -10px;
   display: flex;
@@ -21,7 +21,8 @@ header {
   margin-top: 20px;
   font-size: 25px;
   font-family: Verdana, sans-serif;
-  color: #ffffff;
+  color: #fa0707;
+  text-shadow: 3px 2px violet;
 }
 
 
@@ -31,7 +32,7 @@ nav {
   padding-top: 30px;
   font-size: 16px;
   font-family: Verdana, sans-serif;
-  color: #a10505;
+  color: black;
   letter-spacing: 0.7px;
 }
 
@@ -50,7 +51,7 @@ a:hover {
 }
 
 a:link {
-  color: white;
+  color: rgb(243, 11, 11);
   text-decoration: none;
 }
 
@@ -68,7 +69,7 @@ a:visited {
   margin-top: 70px;
   margin-bottom: -10px;
   width: 10%;
-  background-color: rgb(154, 229, 235);
+  background-color: rgb(235, 11, 160);
   min-height: 100%; 
   margin-left: -5px; 
 }
@@ -79,7 +80,7 @@ a:visited {
   margin-top: 70px;
   width: 88%;
   height: auto;
-  background-color: #F4EBC3;
+  background-color: rgb(77, 245, 26);
   margin-bottom: 0;
   line-height: 20px;
   padding-left: 20px;
@@ -97,7 +98,7 @@ a:visited {
 footer {
   position: relative;
   height: 55px;
-  background-color: #668284;
+  background-color: #159af3;
   font-family: Verdana, sans-serif;
   font-size: 14px;
   text-align: center;
