--- a/resumestylesheet.css
+++ b/resumestylesheet.css
@@ -67,7 +67,7 @@ a:hover {
 	float: right;
 	margin-top: 50px;
 	width: 88%;
-	height: 400px;
+	height: auto;
 	background-color: #F4EBC3;
 	margin-bottom: 10px;
 }
