--- a/resumestylesheet.css
+++ b/resumestylesheet.css
@@ -52,21 +52,26 @@ a:hover {
 	font-weight: bold;
 }
 
+#clearfix {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
 .left {
 	position: relative;
 	float: left;
 	margin-top: 50px;
 	width: 10%;
-	height: 400px;
+	height: auto;
 	background-color: #B9D7D9;
 	margin-bottom: 10px;
 }
 
 .right {
 	position: relative;
-	float: right;
+	float: left;
 	margin-top: 50px;
-	width: 88%;
+	width: 90%;
 	height: auto;
 	background-color: #F4EBC3;
 	margin-bottom: 10px;
