--- a/resumestylesheet.css
+++ b/resumestylesheet.css
@@ -44,10 +44,6 @@ h4 {
 	color: #000000;
 }
 
-li {
-	list-style-type: square;
-}
-
 a:hover {
 	font-weight: bold;
 }
@@ -57,26 +53,30 @@ a:hover {
     flex-wrap: nowrap;
 }
 
-ul {
-    list-style-type: none;
+li {
+	list-style-type: square;
+}
+
+#nav {
+	list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: fixed;
     bottom: 0;
-    width: 100%;
+	width: 100%;
 }
 
-li {
-    float: left;
+#nav li {
+	float: right;
+	list-style-type: none;
 }
 
-li a {
+#nav li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 10px;
     text-decoration: none;
 }
 
@@ -88,17 +88,18 @@ li a {
 	width: 10%;
 	height: auto;
 	background-color: #B9D7D9;
-	margin-bottom: 10px;
+	
 }
 
 .right {
 	position: relative;
 	float: left;
 	margin-top: 50px;
+	padding-left: 20px;
 	width: 90%;
 	height: auto;
 	background-color: #F4EBC3;
-	margin-bottom: 10px;
+	
 }
 
 footer {
@@ -113,6 +114,6 @@ footer {
 }
 
 footer p {
-	position: relative;
+	
 	padding-top: 15px;
 }
