--- a/goalstylesheet.css
+++ b/goalstylesheet.css
@@ -125,7 +125,7 @@ a:hover {
     text-align: center;
 }
 
-#footer p {
+#footer a {
     align-self: center;
     text-align: center;
     color: black;
